# SoftAdaptX

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
softadaptx/: __init__.py
softadaptx/algorithms/: loss_weighted_variant.py  normalized_slopes_variant.py  original_variant.py
softadaptx/base/: __init__.py  _softadapt_base_class.py
softadaptx/constants/: _finite_difference_constants.py
softadaptx/utilities/: __init__.py  _finite_difference.py
tests/: test_finite_difference.py  test_softadapt_original_variant.py
